@@ -1,3 +1,9 @@
+Current SVN trunk
+--------------------------------------------------------------------------------
+* Removed category icon config from category record as it has no more effect. 
+  Category icons can be edited by TYPOScript only.
+
+
 3.0.0 (September 2012)
 --------------------------------------------------------------------------------
 * new feature: added next / previous navigation links to singleview
